Menerapkan PWA agar bisa di install via Chrome

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kecilin-lagu</title>
+    <meta name="theme-color" content="#0f172a" />
+    <meta name="description" content="Kecilin Lagu - Kompres audio langsung di browser dengan cepat, aman, dan tanpa server." />
+    <title>Kecilin Lagu - Audio Compressor</title>
   </head>
   <body>
     <div id="root"></div>
